[gd_scene load_steps=2 format=2]

[ext_resource path="res://accesorios/menu/create_server/create_server.gd" type="Script" id=1]

[node name="create_server" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
script = ExtResource( 1 )

[node name="button_server_connect" type="Button" parent="."]
margin_left = 805.0
margin_top = 442.0
margin_right = 976.0
margin_bottom = 470.0
text = "create server"

[node name="button_server_status" type="Button" parent="."]
margin_left = 574.0
margin_top = 442.0
margin_right = 745.0
margin_bottom = 470.0
text = "server status"

[node name="button_server_clients" type="Button" parent="."]
margin_left = 347.0
margin_top = 442.0
margin_right = 518.0
margin_bottom = 470.0
text = "server clients"

[node name="button_server_stop" type="Button" parent="."]
margin_left = 805.0
margin_top = 494.0
margin_right = 976.0
margin_bottom = 522.0
text = "stop server"

[node name="button_current_ip" type="Button" parent="."]
margin_left = 594.0
margin_top = 494.0
margin_right = 709.0
margin_bottom = 522.0
text = "GET CURRENT IP"

[node name="button_back" type="Button" parent="."]
margin_left = 27.0
margin_top = 442.0
margin_right = 193.0
margin_bottom = 522.0
text = "BACK TO CONNECTIONS"

[node name="text_area_current_connected" type="TextEdit" parent="."]
margin_left = 224.0
margin_top = 141.0
margin_right = 793.0
margin_bottom = 223.0
readonly = true

[node name="text_area_server_status" type="TextEdit" parent="."]
margin_left = 805.0
margin_top = 81.0
margin_right = 976.0
margin_bottom = 119.0
text = "OFF"
readonly = true

[node name="text_area_ip" type="TextEdit" parent="."]
margin_left = 224.0
margin_top = 293.0
margin_right = 276.0
margin_bottom = 327.0
text = "IP"
readonly = true

[node name="edit_area_ip" type="TextEdit" parent="."]
margin_left = 293.0
margin_top = 293.0
margin_right = 410.0
margin_bottom = 327.0

[node name="text_area_port" type="TextEdit" parent="."]
margin_left = 443.0
margin_top = 293.0
margin_right = 495.0
margin_bottom = 327.0
text = "PORT"
readonly = true

[node name="edit_area_port" type="TextEdit" parent="."]
margin_left = 518.0
margin_top = 293.0
margin_right = 635.0
margin_bottom = 327.0

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="button_server_connect" to="." method="_on_button_server_connect_pressed"]
[connection signal="pressed" from="button_server_status" to="." method="_on_button_server_status_pressed"]
[connection signal="pressed" from="button_server_clients" to="." method="_on_button_server_clients_pressed"]
[connection signal="pressed" from="button_server_stop" to="." method="_on_button_server_stop_pressed"]
[connection signal="pressed" from="button_current_ip" to="." method="_on_button_current_ip_pressed"]
[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
